@@ -29,6 +29,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #20045: Fix "setup.py register --list-classifiers".
+
 - Issue #18879: When a method is looked up on a temporary file, avoid closing
   the file before the method is possibly called.
 
